--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,16 @@
-# editorconfig.org
 root = true
 
 [*]
 indent_style = space
-indent_size = 4
-tab_width = 4
+indent_size = 2
+tab_width = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[**.svg]
+insert_final_newline = false
+
+[Makefile]
+indent_style = tab
