switch to dns-socket for dns, user opendns for queries

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "async": "^2.1.4",
+    "dns-socket": "^1.6.1",
     "ip-ptr": "^1.2.0"
   },
   "devDependencies": {
