--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "ava": "^0.24.0",
     "eslint": "^4.14.0",
+    "eslint-config-silverwind": "^1.0.33",
     "updates": "^2.0.3"
   }
 }
