--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-silverwind": "120.1.2",
     "typescript-config-silverwind": "14.0.0",
     "updates": "16.0.1",
+    "updates-config-silverwind": "1.0.3",
     "vitest": "1.5.0",
     "vitest-config-silverwind": "8.0.4"
   },
